--- a/wat.html
+++ b/wat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TON Wallet Connection</title>
+    <title>sendtron on adress</title>
     <link rel="stylesheet" href="material/css/w.css">
 </head>
 
