--- a/wat.html
+++ b/wat.html
@@ -21,8 +21,8 @@
             <p>Please connect your Telegram TON wallet to continue.</p>
 
             <div class="wallet-options">
-                <button id="connectWallet" class="wallet-btn">Connect Wallet</button>
-                <button id="cancelWallet" class="cancel-btn">Cancel</button>
+                <button id="connectWallet" class="wallet-btn">copy address for deposite</button>
+                <button id="cancelWallet" class="cancel-btn">wait</button>
             </div>
 
             <div id="statusMessage" class="status"></div>
