--- a/wat.html
+++ b/wat.html
@@ -17,7 +17,7 @@
     <div id="walletModal" class="modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
-            <h2>Deposit ton in King dog</h2>
+            <h2>Deposit ton</h2>
             <p>Please connect your Telegram TON wallet to continue.</p>
 
              <div class="wallet-options">
