--- a/wat.html
+++ b/wat.html
@@ -18,7 +18,7 @@
         <div class="modal-content">
             <span class="close-btn">&times;</span>
             <h2>Deposit ton</h2>
-            <p>Please connect your Telegram TON wallet to continue.</p>
+            <p>Please diposite ton to continue.</p>
 
              <div class="wallet-options">
                 <button id="connectWallet" class="wallet-btn">copy address for deposite</button>
