--- a/wat.html
+++ b/wat.html
@@ -12,6 +12,7 @@
     <!-- Open Wallet Pop-up Button -->
     <button id="openModalBtn" class="open-button">send your 0.1 ton </button>
     
+    <!-- Open Wallet Pop-up Button -->
     <button id="openModalBtn" class="open-button">or send trx </button>
   
     <!-- Modal Window -->
