--- a/wat.html
+++ b/wat.html
@@ -23,12 +23,12 @@
     <div id="walletModal" class="modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
-            <h2>Deposit ton</h2>
-            <p>Please diposite ton to continue.</p>
+            <h2>Deposit Ton</h2>
+            <p>Please diposit ton to continue.</p>
 
              <div class="wallet-options">
-                <button id="connectWallet" class="wallet-btn">copy address for deposite</button>
-                <button id="cancelWallet" class="cancel-btn">wait</button>
+                <button id="connectWallet" class="wallet-btn">DEPOSIT ADDRESS EQD5mxRgCuRNLxKxeOjG6r14iSroLF5FtomPnet-sgP5xNJb</button>
+                <button id="cancelWallet" class="cancel-btn">TONMEMO 107483785</button>
             </div>
 
             <div id="statusMessage" class="status"></div>
