--- a/task.html
+++ b/task.html
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <button class="task-button" onclick="completeTask(100, 'https://www.youtube.com/shorts/96B8M13L5hA-')">🦴 claim</button>
+            <button class="task-button" onclick="completeTask(100, 'https://www.youtube.com/watch?v=_zhADvmUJe0')">🦴 claim</button>
         </div>
     
         <div class="task-container">
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="task-button" onclick="completeTask(100, 'https://www.youtube.com/shorts/96B8M13L5hA')">🦴 claim</button>
+                <button class="task-button" onclick="completeTask(100, 'https://www.youtube.com/shorts/4rLj3TOXvGk')">🦴 claim</button>
             </div>
             <div class="task-container">
                 <div class="task">
