--- a/wat.html
+++ b/wat.html
@@ -3,32 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>send tron on adress</title>
+    <title>TON Wallet Connection</title>
     <link rel="stylesheet" href="material/css/w.css">
 </head>
 
 <body>
 
     <!-- Open Wallet Pop-up Button -->
-    <button id="openModalBtn" class="open-button">send your 0.1 ton </button>
-
-
-    
-    <!-- Open Wallet Pop-up Button -->
-    <button id="openModalBtn" class="open-button">or send trx </button>
-
-
-    
+    <button id="openModalBtn" class="open-button">Connect TON Wallet</button>
+   
+  
     <!-- Modal Window -->
     <div id="walletModal" class="modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
-            <h2>Deposit Ton</h2>
-            <p>Please diposit ton to continue.</p>
+            <h2>Connect Your TON Wallet</h2>
+            <p>Please connect your Telegram TON wallet to continue.</p>
 
-             <div class="wallet-options">
-         <button id="connectWallet" class="wallet-btn">EQD5mxRgCuRNLxKxeOjG6r14iSroLF5FtomPnet-sgP5xNJb</button>
-                <button id="cancelWallet" class="cancel-btn">TONMEMO 107483785</button>
+            <div class="wallet-options">
+                <button id="connectWallet" class="wallet-btn">Connect Wallet</button>
+                <button id="cancelWallet" class="cancel-btn">Cancel</button>
             </div>
 
             <div id="statusMessage" class="status"></div>
